--- a/docassemble/VTFeeWaiver/data/questions/VT_fee_waiver.yml
+++ b/docassemble/VTFeeWaiver/data/questions/VT_fee_waiver.yml
@@ -113,7 +113,7 @@ code: |
 sections:
   - intro: Is this interview right for you
   - about_you: You and your household
-  - case_info: Court case info
+  - case_info: Your court case
   - your_income: Your income
   - your_expenses: Your expenses
   - your_assets: Your property and assets
@@ -680,7 +680,7 @@ subquestion: |
   
   <i class="fas fa-file-text fa-2x"></i> This guided interview will produce a completed fee waiver form for Vermont courts -- form 600-00228. If approved by the Vermont Judiciary, you will not have to pay the court to start a court action.
   
-    <i class="fas fa-clock fa-2x"></i>  It may take you between 15 and 40 minutes to complete this interview. If you want, you can create an account and save your work to return to later.
+    <i class="fas fa-clock fa-2x"></i>  It may take you between 10 and 40 minutes to complete this interview. If you want, you can create an account and save your work to return to later.
 
   <i class="fas fa-circle-info fa-2x"></i> It is free to use this program. This site is not a lawyer.
   
@@ -712,16 +712,19 @@ subquestion: |
   
   For this guided interview, you will need to know:
   
-  * the public benefits that you get
+  * the name and address of any employer you might have
+  * any public benefits that you get, and
+  * information about the court case for which you want a fee waiver (You can find this information on other court papers you have about this case. If you are starting a court action -- like filing for divorce -- you won't have a case number or docket number yet.)
+  
+  If you get public benefits, that's all you need. If you don't get public benefits, you will also need to know:
+  
   * the amount of money you have in the bank and on hand
   * your income in the past month
   * your income over the past 12 months
-  * your monthly expenses, and
-  * the value of your vehicles / cars, real estate / home, and any other major things you own.
+  * your monthly expenses
+  * the value of your vehicles / cars, real estate / home, and any other major things you own, and
+  * if filling out form on behalf of a minor or incompetent adult, you need that person’s information.
 
-  If you are filling out this form on behalf of a minor or incompetent adult, you will need that person’s information.
-
-  You will also need to know information about the court case for which you want a fee waiver. You can find this information on other court papers you have about this case. (If you are starting a court action -- like filing for divorce -- you won't have a case number or docket number yet.)
 ---
 id: important_notes_to_user
 question: |
@@ -754,9 +757,6 @@ fields:
 
   - County: trial_court_index
     code: all_courts._load_courts()['address_county'].items()
-    
-  - note: |
-      ${ after_last_question_we_will_generate_your_forms }
 ---
 id: Court case information
 question: |
@@ -766,6 +766,8 @@ subquestion: |
 fields:
   - "Case name, as seen on your court papers (example: Kramer vs. Kramer)": case_name
     maxlength: 80
+  - note: |
+      If you are starting a case, type in your name (the plaintiff's name) "vs." the other party (the defendant's name).
 ---
 id: Gather users street address
 sets:
@@ -1168,7 +1170,7 @@ fields:
 
 
 ---
-id: More information
+id: more information
 question: |
   More information
 subquestion: |
@@ -1178,7 +1180,8 @@ fields:
     input type: area
     maxlength: 550
     required: False
-
+  - note: |
+      ${ after_last_question_we_will_generate_your_forms }
 ---
 id: User signature
 question: |
@@ -1381,7 +1384,7 @@ review:
       **Vehicles**
       
       % for item in vehicles:
-      * ${ item.year_make_model() }          
+      * ${ item.make } ${ item.model } ${ item.year }          
       % endfor
       % if not vehicles.there_are_any:
       - None
@@ -1771,36 +1774,42 @@ attachments:
       - "users1_expenses_monthly_total": ${ currency(expenses.total(times_per_year=12)) }
       
       - "assets_yes": |
-          % if vehicles.target_number > 0:
+          % if vehicles.selected_types.any_true():
           ${ "True" }
-
-          % elif real_estate.target_number > 0:
+          % elif real_estate.selected_types.any_true():
           ${ "True" }
-
-          % elif other_assets.target_number > 0:
+          % elif bank_assets.selected_types.any_true():
+          ${ "True" }
+          % elif other_assets.selected_types.any_true():
           ${ "True" }
           % endif
       - "assets_no": |
-          % if vehicles.target_number == 0:
-            % if real_estate.target_number == 0:
-              % if other_assets.target_number == 0:
-                ${ "True" }
-              % endif
-            % endif
+          % if not vehicles.selected_types.any_true():
+          ${ "True" }
+          % elif not real_estate.selected_types.any_true():
+          ${ "True" }
+          % elif not bank_assets.selected_types.any_true():
+          ${ "True" }
+          % elif not other_assets.selected_types.any_true():
+          ${ "True" }
           % endif
       - "users1_assets_vehicle_0_amount_owed": ${ currency(vehicles[0].balance) }
-      - "users1_assets_vehicle_0_description": ${ vehicles[0].year_make_model() }
+      - "users1_assets_vehicle_0_description": |
+           ${ vehicles[0].make } ${ vehicles[0].model } ${ vehicles[0].year } 
       - "users1_assets_vehicle_0_net_value": ${ currency(vehicles[0].market_value - vehicles[0].balance) }
       - "users1_assets_vehicle_0_market_value": ${ currency(vehicles[0].market_value) }
-      - "users1_assets_vehicle_1_description": ${ vehicles[1].year_make_model() }
+      - "users1_assets_vehicle_1_description": |
+           ${ vehicles[1].make } ${ vehicles[1].model } ${ vehicles[1].year } 
       - "users1_assets_vehicle_1_market_value": ${ currency(vehicles[1].market_value) }
       - "users1_assets_vehicle_1_amount_owed": ${ currency(vehicles[1].balance) }
       - "users1_assets_vehicle_1_net_value": ${ currency(vehicles[1].market_value - vehicles[1].balance) }
-      - "users1_assets_vehicle_2_description": ${ vehicles[2].year_make_model() }
+      - "users1_assets_vehicle_2_description": |
+           ${ vehicles[2].make } ${ vehicles[2].model } ${ vehicles[2].year } 
       - "users1_assets_vehicle_2_amount_owed": ${ currency(vehicles[2].balance) }
       - "users1_assets_vehicle_2_net_value": ${ currency(vehicles[2].market_value - vehicles[2].balance) }
       - "users1_assets_vehicle_2_market_value": ${ currency(vehicles[2].market_value) }
-      - "users1_assets_vehicle_3_description": ${ vehicles[3].year_make_model() }
+      - "users1_assets_vehicle_3_description": |
+           ${ vehicles[3].make } ${ vehicles[3].model } ${ vehicles[3].year } 
       - "users1_assets_vehicle_3_market_value": ${ currency(vehicles[3].market_value) }
       - "users1_assets_vehicle_3_amount_owed": ${ currency(vehicles[3].balance) }
       - "users1_assets_vehicle_3_net_value": ${ currency(vehicles[3].market_value - vehicles[0].balance) }
